--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		my favourite animal is <a href="https://images.app.goo.gl/iLrmqtwH54FU91Cy9">cat</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
